--- a/eligibility.html
+++ b/eligibility.html
@@ -213,7 +213,7 @@
             </div>
             <h2>Check Your Loan Eligibility</h2>
             <p class="subtitle">Find out how much you qualify for instantly</p>
-            <p class="amount-range">Ksh. 1,500 â€“ 60,000</p>
+            <p class="amount-range">Ksh. 1,500 - 60,000</p>
         </div>
 
         <form id="eligibility_form" onsubmit="handleSubmit(event)">
@@ -339,5 +339,6 @@
         };
     </script>
 </body>
+
 
 </html>
