--- a/index.html
+++ b/index.html
@@ -303,7 +303,15 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17842586535"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17842586535');
+</script>
 <body>
   <header class="header">
     <div class="header-content">
@@ -386,5 +394,6 @@
     });
   </script>
 </body>
+
 
 </html>
